crates/adze-macro/0.8.0/src/snapshots/adze_macro__tests__struct_with_skip_field.snap
---
source: macro/src/lib.rs
expression: "rustfmt_code(&expand_grammar(parse_quote!\n{\n    #[adze::grammar(\"test\")] mod grammar\n    {\n        #[adze::language] pub struct MyNode\n        {\n            #[adze::leaf(pattern = r\"\\d+\", transform = |v|\n            v.parse().unwrap())] value: i32, #[adze::skip(false)] visited:\n            bool,\n        }\n    }\n})? .to_token_stream().to_string())"
---
mod grammar {
    pub struct MyNode {
        value: i32,
        visited: bool,
    }
    impl ::adze::Extract<MyNode> for MyNode {
        type LeafFn = ();
        #[allow(non_snake_case)]
        fn extract(
            node: Option<::adze::tree_sitter::Node>,
            source: &[u8],
            last_idx: usize,
            _leaf_fn: Option<&Self::LeafFn>,
        ) -> Self {
            let node = node.expect("Extract called with None node for struct");
            ::adze::__private::extract_struct_or_variant(node, move |cursor, last_idx| MyNode {
                value: {
                    ::adze::__private::extract_field::<adze::WithLeaf<i32>, _>(
                        cursor,
                        source,
                        last_idx,
                        "value",
                        Some(&|v| v.parse().unwrap()),
                    )
                },
                visited: false,
            })
        }
    }
    unsafe extern "C" {
        fn tree_sitter_test() -> ::adze::tree_sitter::Language;
    }
    pub fn language() -> ::adze::tree_sitter::Language {
        unsafe { tree_sitter_test() }
    }
    #[doc = r" Parse an input string according to the grammar. Returns either any parsing errors that happened, or a"]
    #[doc = "[`MyNode`]"]
    #[doc = r" instance containing the parsed structured data."]
    pub fn parse(input: &str) -> core::result::Result<MyNode, Vec<::adze::errors::ParseError>> {
        ::adze::__private::parse::<MyNode>(input, language)
    }
}
